[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/Arrow/3.png" type="Texture" id=1]
[ext_resource path="res://Art/Arrow/3_1.png" type="Texture" id=2]
[ext_resource path="res://Elements/Arrow/Arrow_Back/Arrow_Back.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 34, 34 )

[node name="Arrow_Back" type="Node2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 1 )
animation = "1"

[node name="ClickArea" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource( 2 )

[node name="ColdTimer" type="Timer" parent="."]
one_shot = true

[connection signal="mouse_entered" from="ClickArea" to="." method="_on_ClickArea_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_ClickArea_mouse_exited"]
[connection signal="timeout" from="ColdTimer" to="." method="_on_ColdTimer_timeout"]
